added edit function

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,6 +46,27 @@ a {
 	border:1px solid #CCC;
 	background:rgba(80,120,255,0.05);
 }
+
+#saveUser {
+	width:250px;
+	position:absolute;
+	top:0; left:0;
+}
+#saveUser p {
+	padding:15px;
+	border:1px solid #CCC;
+	background:rgba(80,120,255,0.05);
+}
+#saveUser fieldset {
+	background:rgba(80,120,255,0.05);
+	padding-top:15px;
+	padding-left: 15px;
+	padding-bottom:15px;
+	border: 1px solid #CCC;
+}
+#saveUser fieldset strong{
+	display: block;
+}
 fieldset {
 	border:0;
 	padding:0; margin:0;
